<?xml version="1.0"?>
<package format="3">
  <name>simple_agent</name>
  <version>0.0.1</version>
  <description>Simple ROS2 Agent node example</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
